# Auxiliary

backend/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  render.yaml  shell.nix
backend/alembic/: env.py
backend/app/: auth.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/routers/: health.py  notes.py
backend/docs/api/: README.md
backend/tests/: conftest.py  test_auth.py  test_crud.py  test_notes.py
docs/: hosting-options.md  mvp-specification.md
